syntax = "proto3";
package raft;

option go_package = "github.com/djsurt/monkey-minder/server/proto/raftpb";

enum LogEntryType {
  CREATE = 0;
  UPDATE = 1;
  DELETE = 2;
}

message LogEntry {
	LogEntryType kind = 1;
  uint64 term = 2;
	string targetPath = 3;
	// value to be written. ignored if Type is neither MOD_CREATE nor MOD_UPDATE
	string value = 4;
}
